--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
           <input id="price" name="price" type="number" placeholder="5000" max = "1000000" required>
         </fieldset>
-        <fieldset class="ad-form__element ad-form__element--time" >
+        <fieldset class="ad-form__element ad-form__element--time"  disabled>
           <label class="ad-form__label" for="timein">Время заезда и выезда</label>
           <select id="timein" name="timein">
             <option value="12:00" selected>После 12</option>
@@ -247,8 +247,11 @@
       <button class="error__button" href="#">Попробовать снова</button>
     </div>
   </template>
-
+<script src="js/data.js"></script>
+<script src="js/card.js"></script>
+<script src="js/pin.js"></script>
 <script src="js/map.js"></script>
+<script src="js/form.js"></script>
 
 </body>
 </html>
