--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide" disabled>
           <label class="ad-form__label" for="title">Заголовок объявления</label>
-          <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка в центре Токио" min = "30" max="100" required>
+          <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка в центре Токио" minlength = "30" maxlength="100" required>
         </fieldset>
-        <fieldset class="ad-form__element ad-form__element--wide" disabled>
+        <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="address">Адрес</label>
-          <input id="address" name="address" type="text">
+          <input id="address" name="address" type="text" readonly required>
         </fieldset>
         <fieldset class="ad-form__element" disabled>
           <label class="ad-form__label" for="type">Тип жилья</label>
@@ -247,6 +247,9 @@
       <button class="error__button" href="#">Попробовать снова</button>
     </div>
   </template>
+<script src="js/utilities.js"></script>
+ <script src="js/load.js"></script>
+<script src="js/upload.js"></script>
 <script src="js/data.js"></script>
 <script src="js/card.js"></script>
 <script src="js/pin.js"></script>
