--- a/index.html
+++ b/index.html
@@ -247,14 +247,17 @@
       <button class="error__button" href="#">Попробовать снова</button>
     </div>
   </template>
+
+<script src="js/debounce.js"></script>
 <script src="js/utilities.js"></script>
- <script src="js/load.js"></script>
+<script src="js/load.js"></script>
 <script src="js/upload.js"></script>
 <script src="js/data.js"></script>
 <script src="js/card.js"></script>
 <script src="js/pin.js"></script>
 <script src="js/map.js"></script>
 <script src="js/form.js"></script>
+<script src="js/filter.js"></script>
 
 </body>
 </html>
